# sparse_dot_topn

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  NOTICE  README.md  cossim_topn_example.ipynb  makefile  mbuild.sh  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug_report.yml
.github/workflows/: linux.yml  macos.yml  nonvendored_wheels.yml  numpy.yml  test.yml  test_all_python.yml  wheels.yml  windows.yml
bench/: README.md  bench_scipy_csr.py
cmake/: CleanUp.cmake  ConfigureBuildType.cmake  ConfigureTarget.cmake  FindDependencies.cmake  GetCatch2.cmake
cossim_topn/: cossim_topn.pyx  cossim_topn_source.cpp  cossim_topn_source.h
example/: comparison.py  comparison2.py  comparison3.py  example.py  mem_prof.py
sparse_dot_topn/: __init__.py  array_wrappers.pxd  array_wrappers.pyx  awesome_cossim_topn.py  sparse_dot_topn.cpp  sparse_dot_topn.pyx  sparse_dot_topn_parallel.cpp  sparse_dot_topn_parallel.h  sparse_dot_topn_source.cpp  sparse_dot_topn_source.h  sparse_dot_topn_threaded.cpp  sparse_dot_topn_threaded.pyx
src/sparse_dot_topn/: __init__.py  api.py  sparse_dot_topn.py  types.py  unchecked.py
src/sparse_dot_topn_core/cmake/: CleanUp.cmake  ConfigureBuildType.cmake  ConfigureTarget.cmake  FindAvx.cmake  FindDependencies.cmake  FindSse.cmake  GetEigen.cmake  InstallTarget.cmake  SetHomebrew.cmake
src/sparse_dot_topn_core/include/sparse_dot_topn/: common.hpp  maxheap.hpp  sp_matmul.hpp  sp_matmul_bindings.hpp  sp_matmul_topn.hpp  sp_matmul_topn_bindings.hpp  sparse_dot_topn.hpp  sparse_dot_topn_bindings.hpp  topn_sp_matmul.hpp  topn_sp_matmul_bindings.hpp  zip_sp_matmul_topn.hpp  zip_sp_matmul_topn_bindings.hpp
src/sparse_dot_topn_core/src/: bindings.cpp  extension.cpp  sp_matmul_bindings.cpp  sp_matmul_topn_bindings.cpp  zip_sp_matmul_topn_bindings.cpp
tests/: _resources.py  conftest.py  test_api.py
tests/sparse_dot_topn/: test_awesome_cossim_topn.py
